FIX: Retorno da restauração inclui os paths de origem e destino

--- a/nimbus/procedures/templates/add_procedure.html
+++ b/nimbus/procedures/templates/add_procedure.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 
 {% block headtags %}
-
-<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+<script type="text/javascript" src="/media/jquery-ui.js"></script>
+<link href="/media/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <link href="/media/css/procedures.css" rel="stylesheet" type="text/css" />
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 <script type="text/javascript" src="/media/js/procedures.js"></script>
 <script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script>
 <script type="text/javascript">
