--- a/nimbus/procedures/templates/profile_list.html
+++ b/nimbus/procedures/templates/profile_list.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
 {% block headtags %}
+<script type="text/javascript" src="/media/jquery-ui.js"></script>
+<link href="/media/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="/media/js/procedures.js"></script>
-<script type="text/javascript" src="/media/jquery-ui-1.7.2.custom.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/media/css/procedures.css" />
 {% endblock %}
 
