--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -141,7 +141,7 @@
                 <h2 class="titulo_step">4. Local para restauração</h2>
                 
                 <ul class="tree_computer"><li class="directory first"><span><a href="#" path="/">Selecione o local para restauração</a></span></li></ul>
-                
+                <input type="hidden" name="path_restore" class="path_restore" id="path_restore" />
     		    <p>
                     <button type="submit" class="css3button big positive" value="Restaurar Arquivos">Restaurar Arquivos</button>
                 </p>
