FIX: Criação de backups direto da listagem do computador e revisão de console.log ao longo de vários scripts.

--- a/nimbus/computers/templates/computers_list.html
+++ b/nimbus/computers/templates/computers_list.html
@@ -62,7 +62,7 @@
                             <button type="submit" class="css3button positive" value="Restaurar">Restaurar</button>
                         </form>
                         {% endif %}
-                        <a href="/procedures/add/" class="floatright css3button positive">Criar Backup</a>
+                        <a href="/procedures/add/?comp_id={{ comp.id }}" class="floatright css3button positive">Criar Backup</a>
                         <a href="/computers/{{comp.id}}/configure/" class="css3button positive">Reconfigurar</a>
                         
                     </div>
