--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -134,7 +134,8 @@
             {%endblock%}
 
 			<div id="footer">
-				<p class="left"><a href="http://trynimbus.com">Nimbus Opensource</a> é uma iniciativa <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a></p>
+				<p class="left"><a href="http://trynimbus.com">Nimbus Opensource</a> é uma iniciativa <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a> |
+				<a href="/LICENSE/">Terms and License</a></p>
 				<p class="right">Nimbus Opensource v1.0</p>
 			</div>
 		</div>
