Árvore de arquivos e paginação na lista de jobs

--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -108,7 +108,7 @@
     			<div class="bheadr"></div>
 
     			<h2 class="floatleft">Procedimentos</h2>&nbsp;&nbsp;
-    			<a href="/procedures/list" class="css3button positive">Listar todos os procedimentos</a>
+    			<a href="/procedures/history" class="css3button positive">Listar todos os procedimentos</a>
 
     		</div>		<!-- .block_head ends -->
 
