--- a/nimbus/filesets/templates/add_fileset.html
+++ b/nimbus/filesets/templates/add_fileset.html
@@ -1,9 +1,9 @@
-
+{% extends 'base_async.html' %}
 
 {% block headtags %}
 <link rel="stylesheet" type="text/css" href="/media/css/filesets.css" media="screen" />
-<script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script>
 <script type="text/javascript" src="/media/js/filesets.js"></script>
+<script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script>
 {% endblock %}
 
 {% block page %}
