--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -36,6 +36,9 @@
 	<script src="/media/js/jquery.maskedinput-1.2.2.min.js" type="text/javascript"></script>
 	<script src="/media/lib/js/jquery.uniform.js" type="text/javascript"></script>
 	
+	<script type="text/javascript" src="/media/jquery-ui.js"></script>
+    <link href="/media/jquery-ui-1.7.2.custom.css" rel="stylesheet" type="text/css"/>
+	
 	{% block headtags %}{% endblock %}
 	
 	<script type="text/javascript" src="/media/lib/js/custom.js"></script>
