--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -57,17 +57,6 @@
     		</div>		<!-- .block_head ends -->
 
     		<div class="block_content">
-                <div class="left" class="mamory-use">
-                    <h4>Uso da Memória</h4>
-                    {% with table4.lines.Ocupado.0 as value %}
-    			        {% include "bar_chart.html" %}
-    			    {% endwith %}
-                    <br/>
-                    <h4>Uso da CPU</h4>
-                    {% with table5.lines.Ocupado.0 as value %}
-    			        {% include "bar_chart.html" %}
-    			    {% endwith %}
-                </div>
                 <div class="right" id="disc-use">
                 {% if table3 %}
     			    {% with table3 as table %}
@@ -78,21 +67,28 @@
                     <p><em>Sem uso do disco</em></p>
                 {% endif %}
                 </div>
-                <div class="left" id="offsite-use">
-                {% if table6 %}
-                    {% with table6 as table %}
-    			        {% include "table_chart.html" %}
-    			    {% endwith %}
-                {% else %}
-                    <h2>Uso do offsite</h2>
-                    <p><em>Sem uso do offsite</em></p>
-                {% endif %}
-                </div>
 
        		    <div class="clear"></div>
     		    <p></p>
 
     		</div>		<!-- .block_content ends -->
+    		<div class="block_content">
+                <div id="memory-use">
+                    <div class="left memory">
+                        <h4>Uso da Memória</h4>
+                        {% with table4.lines.Ocupado.0 as value %}
+        			        {% include "bar_chart.html" %}
+        			    {% endwith %}
+    			    </div>
+    			    <div class="right cpu">
+                        <h4>Uso da CPU</h4>
+                        {% with table5.lines.Ocupado.0 as value %}
+        			        {% include "bar_chart.html" %}
+        			    {% endwith %}
+                    </div>
+                </div>
+                <div class="clear"></div>
+            </div>		<!-- .block_content ends -->
 
     		<div class="bendl"></div>
     		<div class="bendr"></div>
