--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -1439,11 +1439,11 @@ p.alert a{color: #8F7E11;}
 
 /* Estatisticas */
 #memory-use{
-    width: 48%;
+    width: 100%;
 }
 #disc-use {
 /*     margin-left: 30px; */
-    width: 48%;
+    width: 100%;
 }
 
 #offsite-use {
@@ -1452,12 +1452,16 @@ p.alert a{color: #8F7E11;}
     width: 35%;
 }
 
+.memory, .cpu{
+    width: 45%;
+}
+
 .grafico_uma_barra {}
 .grafico_uma_barra .grafico_uma_barra_wrapper {
     -moz-border-radius: 3px;
     background-color: #AAA;
     height: 20px;
-    width: 210px;
+    width: 100%;
 }
 .grafico_uma_barra .grafico_uma_barra_wrapper .grafico_uma_barra_inner {
     -moz-border-radius: 3px;
