--- a/nimbus/wizard/templates/license.html
+++ b/nimbus/wizard/templates/license.html
@@ -5,14 +5,13 @@
 {% endblock %}
 
 {% block content %}
-
     <form action="" method="post" id="{{page_name}}_form">
         
         {% include "base_license.html" %}
         
         <p class="input_submit">
             {% if previous %}
-            <a href="{{ previous }}" class="submit left"><span>Anterior</span></a> &nbsp;
+            <a href="{{ previous }}" class="css3button big"><span>Anterior</span></a> &nbsp;
             {% endif %}
             <button type="submit" class="css3button big positive floatright" value="Concordo">Concordo</button>
         </p>
@@ -20,6 +19,4 @@
         <input type="hidden" name="next" value="{{ next }}" />
 
     </form>
-
-
 {% endblock %}
