FIX: Página recarrega após criar conjunto de arquivos.

--- a/nimbus/procedures/templates/profile_list.html
+++ b/nimbus/procedures/templates/profile_list.html
@@ -30,7 +30,7 @@
 		<div class="procedure">
             {% for fileset in filesets %}
 			<div class="fileset">
-                <div class="title">
+                <div class="title" id="fileset_{{ fileset.id }}">
                     <div class="title-left">
     			        <span class="name">{{ fileset.name }}</span>
                     </div>
