FIX: Accordion do histórico de procedimentos

--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -12,6 +12,9 @@
 <script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pointLabels.js"></script>
 <script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.cursor.min.js"></script>
 <script type="text/javascript" src="/media/js/home.js"></script>
+<!-- this is here due stat_block.html -->
+<script type="text/javascript" src="/media/js/procedures.js"></script>
+<link rel="stylesheet" type="text/css" href="/media/css/procedures.css" />
 {% endblock %}
 
 {% block content %}
