--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -46,7 +46,7 @@
                 {% endif %}
                 <p>
                     <label for="procedure_id">Selecione o procedimento:</label><br/>
-                    <select name="procedure_id" id="procedure_id" class="styled">
+                    <select name="procedure_id" id="procedure_id" >
                         <option value=""> - Selecione - </option>
                         {% for procedure in computer.procedure_set.all %}
                         <option value="{{procedure.id}}">{{procedure.name}}</option>
@@ -61,7 +61,7 @@
                 {% endif %}
                 <p>
                     <label for="computer_id">Computador que será restaurado:</label><br/>
-                    <select class="styled" id="computer_id" name="computer_id">
+                    <select  id="computer_id" name="computer_id">
                         <option value=""> - Selecione - </option>
                         {% for computer in computers %}
                         <option value="{{computer.id}}">{{computer.name}}</option>
@@ -77,7 +77,7 @@
                 {% endif %}
                 <p class="procedure_select" class="hidden">
                     <label for="procedure_id">Selecione o procedimento:</label><br/>
-                    <select name="procedure_id" id="procedure_id" class="styled">
+                    <select name="procedure_id" id="procedure_id" >
                         <option value=""> - Selecione - </option>
                         {% for procedure in computer.procedure_set.all %}
                         <option value="{{procedure.id}}">{{procedure.name}}</option>
@@ -117,7 +117,7 @@
                     <li>{{ errors.job_id }}</li>
                 </ul>
                 {% endif %}
-                <select name="job_id" class="styled" id="jobs_list">
+                <select name="job_id"  id="jobs_list">
                     <option value=""> - Selecione um Job - </option>
                 </select>
                 <div class="clear"></div>
