Tradução do botão de sair

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -107,7 +107,7 @@
 				
 				<!-- <p class="user">Olá, <a href="#">Administrador</a> | <a href="index.html">Sair do sistema</a></p> -->
 				{% include "status_header.html" %}
-				<div id="logout-button" class="align_right"><a href="/session/logout">Logout</a></div>
+				<div id="logout-button" class="align_right"><a href="/session/logout">Sair</a></div>
 				<div id="clock" class="time align_right">
 			        <small>Horário</small><br/>
 			        <span id="actual_time">{% now "H:i:s" %}</span>
