Rodape e logo do nimbus opensource

--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -130,7 +130,7 @@ display: none;
 	font-weight: normal;
 	text-transform: uppercase;
 	color: #fff;
-	background: url(../images/logo.png) left no-repeat;
+	background: url(../images/logo_opensource.png) left no-repeat;
 	width: 93px;
     height: 50px;
 	text-indent: -99999em;
