--- a/nimbus/base/templates/base_login.html
+++ b/nimbus/base/templates/base_login.html
@@ -84,7 +84,14 @@
 								
 			</div>		<!-- .login ends -->
 
-		
+            <div id="footer">
+				<p class="left"><a href="http://trynimbus.com">Nimbus Opensource</a> é uma iniciativa <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a> |
+				<a href="/LICENSE/">Terms and License</a></p>
+				<p class="right">Nimbus Opensource Backup v1.0</p>
+			</div>
+
+
+
 		
 		</div>						<!-- wrapper ends -->
 		
