--- a/nimbus/schedules/templates/remove_schedule.html
+++ b/nimbus/schedules/templates/remove_schedule.html
@@ -25,7 +25,8 @@
 				{% else %}
 				Não existe nenhum procedimento de backup utilizando este agendamento.
 				{% endif %}
-            <p>Esta operação não poderá ser desfeita. Deseja prosseguir mesmo assim?</p>
+			<br />
+            <p><strong>Esta operação não poderá ser desfeita. Deseja prosseguir mesmo assim?</strong></p>
             <p>
                 <!-- <input type="submit" class="css3button positive" name="confirm" value="Prosseguir" /> ou <a href="" onclick="history.back(-1); return false;">Cancelar</a> -->
                 <a href="/schedules/do_delete/{{schedule.id}}" class="css3button negative">Excluir</a> ou <a href="" class="css3button positive" onclick="history.back(-1); return false;">Cancelar</a>
