BugFix: #894 - Os 2 gráficos aparecem ao mesmo tempo

--- a/nimbus/base/templates/home.html
+++ b/nimbus/base/templates/home.html
@@ -26,22 +26,24 @@
 
     			<h2>Backups</h2>
 
-                <ul class="tabs">
+                <!-- <ul class="tabs">
                     <li><a href="#backup-bytes">Mega bytes</a></li>
                     <li><a href="#backup-files">Quantidade de Arquivos</a></li>
-                </ul>
-            </div>		<!-- .block_head ends -->
+                </ul> -->
+            </div>
 
-		    <div class="block_content tab_content" id="backup-bytes">
+		    <!-- <div class="block_content tab_content" id="backup-bytes"> -->
+		    <div class="block_content" id="backup-bytes">
 		        {% with table1 as table %}
 			        {% include "table_chart.html" %}
 			    {% endwith %}
 		    </div>
-    		<div class="block_content tab_content" id="backup-files">
+    		<!-- <div class="block_content tab_content" id="backup-files"> -->
+    		<div class="block_content" id="backup-files">
 			    {% with table2 as table %}
 			        {% include "table_chart.html" %}
 			    {% endwith %}
-    		</div>		<!-- .block_content ends -->
+    		</div>
 
 
 
