Configuração de email para relatórios

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -96,6 +96,7 @@
                             <li><a href="/users/password_change">Alterar Senha</a></li>
                             <li><a href="/network/config">Configuração de Rede</a></li>
                             <li><a href="/timezone/config">Configuração de Hora</a></li>
+                            <li><a href="/reports/email_conf">Notificações por email</a></li>
                         </ul>
 					</li>
 					<li class="nobg"><a href="#">Ajuda</a>
