--- a/nimbus/filesets/templates/try_tree.html
+++ b/nimbus/filesets/templates/try_tree.html
@@ -3,22 +3,31 @@
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 		<script type="text/javascript">
 		$(document).ready(function(){
-			$("#botao").click(function(){
-				ITEM_INDEX = 0;
-				var path = $("#path_field").val();
-				var computer = $("#computer_field").val();
+			ITEM_INDEX = 0;
+			CHECK_TYPE = "checkbox";
+			IS_WINDOWS = false;
+			HIDE_FILES = false;
+			var computer = 1;
+			if (IS_WINDOWS == true) {
+				var path = "";
 				var click_event = "fetch_dir_content('" + path + "', '" + computer + "', '" + ITEM_INDEX + "')"
-				var new_line = "<li id='li_" + ITEM_INDEX + "'>" +
-								"<input type='checkbox'></input><span onClick=\"" + click_event + "\">" + path +
+				var new_line = "<li class='directory'id='li_" + ITEM_INDEX + "'>" +
+								"<input type='" + CHECK_TYPE + "' disabled='disabled'><span class='end_path' onClick=\"" + click_event + "\">Meu computador" +
 								"</span></li><ul id='" + ITEM_INDEX + "'>" + 
 								"</ul>"
-				$("#arvore").append(new_line);
-				ITEM_INDEX++;
-				// fetch_dir_content(path, computer, ITEM_INDEX);
-			});
+			} else {
+				var path = "/";
+				var click_event = "fetch_dir_content('" + path + "', '" + computer + "', '" + ITEM_INDEX + "')"
+				var new_line = "<li class='directory'id='li_" + ITEM_INDEX + "'>" +
+								"<input type='" + CHECK_TYPE + "' name=\"restore_path\" value=\"" + path + "\"></input><span class='end_path' onClick=\"" + click_event + "\">/" +
+								"</span></li><ul id='" + ITEM_INDEX + "'>" + 
+								"</ul>"
+			};
+			$("#arvore").append(new_line);
+			ITEM_INDEX++;
 		});
 		function fetch_dir_content(path, computer, id) {
-			console.log(path, computer, id);
+			console.log(path, computer, id);			
 			ul_of_this_item = $("#" + id);
 			this_item_li = $("#li_" + id);
 			if (ul_of_this_item.hasClass("open") == true) {
@@ -35,9 +44,14 @@
 				};
 				ul_of_this_item.addClass("filled");
 			}
+			if ($("#wait")[0] != undefined) {
+				return false
+			} else {
+				$("#arvore").append("<div id='wait'>Aguarde <img src='/media/icons/loading_bar.gif'/></div>");
+			}
 			$.ajax({
 				type: "POST",
-				async: false,
+				// async: false,
 				url: "http://192.168.50.129/filesets/get_tree/",
 				data: "computer_id=" + computer + "&path=" + path,
 				dataType: "json",
@@ -45,34 +59,50 @@
 					console.log(file_list);
 					for (var i in file_list) {
 						var full_path = file_list[i];
+						if (full_path[full_path.length -1] == "/") {
+							var click_event = "fetch_dir_content('" + full_path + "', '" + computer + "', '" + ITEM_INDEX + "')"
+							var location_type = "directory";
+						} else {
+							var click_event = ""
+							var location_type = "file";
+						}
 						var new_path = full_path.slice(path.length);
-						var click_event = "fetch_dir_content('" + full_path + "', '" + computer + "', '" + ITEM_INDEX + "')"
-						var new_line = "<li id='li_" + ITEM_INDEX + "'>" +
-										"<input type='checkbox'></input><span onClick=\"" + click_event + "\">" + new_path +
+						var new_line = "<li class='" + location_type + "'id='li_" + ITEM_INDEX + "'>" +
+										"<input type='" + CHECK_TYPE + "' name=\"restore_path\" value=\"" + full_path + "\"></input><span class='end_path' onClick=\"" + click_event + "\">" + new_path +
 										"</span></li><ul id='" + ITEM_INDEX + "'>" + 
 										"</ul>"
-						ul_of_this_item.append(new_line);
+						if ((HIDE_FILES == false) || (location_type != "file")) {
+							ul_of_this_item.append(new_line);
+						} 
 						ITEM_INDEX++;
 					}
+					$("#wait").remove();
 				}
 			});
 		};
-		// });
 		</script>
 		<style type="text/css">
-			ul#arvore { border: solid 1px;}
+			ul#arvore { border: solid 1px;
+						background: #FEFCC6;
+						padding: 10px;
+					  }
 			ul {display: hidden;}
-			li.open {color: #FF0000;}
+			li {margin-top: 3px;}
+			.end_path { padding-left: 24px;}
+			li.directory {background: url('/media/icons/folder.png') no-repeat 20 0;}
+			li.open {background: url('/media/icons/folder-open.png') no-repeat 20 0;}
+			li.file {background: url('/media/icons/file_generic.png') no-repeat 20 0;}
+			div#wait {position: absolute;
+					   border: solid 1px;
+					   background: #AAAAAA;
+					 }
+			ul {list-style: none;}
 		</style>
 	</head>
 	<body>
-		<form method="POST" id="test_form">
-			<input type="text" name="computer_id" id="computer_field" value="1">
-			<input type="text" name="path" id="path_field" value="/">
-			<a href="#" id="botao">Enviar</a>
-		</form>
 		<div>
 			<ul id="arvore">
+				<!-- <div id="teste">Aguarde...</div> -->
 				
 			</ul>
 		</div>					
