Nova árvore agora com suporte a várias árvores no mesmo template

--- a/nimbus/filesets/templates/try_tree.html
+++ b/nimbus/filesets/templates/try_tree.html
@@ -3,31 +3,63 @@
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
 		<script type="text/javascript">
 		$(document).ready(function(){
-			ITEM_INDEX = 0;
-			CHECK_TYPE = "checkbox";
-			IS_WINDOWS = false;
-			HIDE_FILES = false;
-			var computer = 1;
-			if (IS_WINDOWS == true) {
+			TREES = find_containers();
+			for (var t = 0; t < TREES.length; t++) {
+				create_tree(TREES[t]);
+			};
+		});
+		function find_containers() {
+			var TREES = new Array();
+			for (var o = 0; o < $(".veezortree").length; o++) {
+				Tree = new Object();
+				Tree.CONTAINER = $(".veezortree")[o].id;
+				Tree.CHECK_TYPE = $(".veezortree")[o].attributes["check_type"].value;
+				Tree.computer = $(".veezortree")[o].attributes["computer"].value;
+				if ($(".veezortree")[o].attributes["is_windows"].value == "true") {
+					Tree.IS_WINDOWS = true;
+				} else {
+					Tree.IS_WINDOWS = false;
+				};
+				if ($(".veezortree")[o].attributes["hide_files"].value == "true") {
+					Tree.HIDE_FILES = true;
+				} else {
+					Tree.HIDE_FILES = false;
+				};
+				Tree.ITEM_INDEX = 0;
+				TREES.push(Tree);				
+			}
+			return TREES;
+		}
+		function create_tree(Tree) {
+			if (Tree.IS_WINDOWS == true) {
 				var path = "";
-				var click_event = "fetch_dir_content('" + path + "', '" + computer + "', '" + ITEM_INDEX + "')"
-				var new_line = "<li class='directory'id='li_" + ITEM_INDEX + "'>" +
-								"<input type='" + CHECK_TYPE + "' disabled='disabled'><span class='end_path' onClick=\"" + click_event + "\">Meu computador" +
-								"</span></li><ul id='" + ITEM_INDEX + "'>" + 
+				var click_event = "fetch_dir_content('" + Tree.CONTAINER + "', '" + path + "', '" + Tree.computer + "', '" + Tree.CONTAINER+Tree.ITEM_INDEX + "')"
+				var new_line = "<li class='directory'id='li_" + Tree.CONTAINER+Tree.ITEM_INDEX + "'>" +
+								"<input type='" + Tree.CHECK_TYPE + "' disabled='disabled'><span class='end_path' onClick=\"" + click_event + "\">Meu computador" +
+								"</span></li><ul id='" + Tree.CONTAINER+Tree.ITEM_INDEX + "'>" + 
 								"</ul>"
 			} else {
 				var path = "/";
-				var click_event = "fetch_dir_content('" + path + "', '" + computer + "', '" + ITEM_INDEX + "')"
-				var new_line = "<li class='directory'id='li_" + ITEM_INDEX + "'>" +
-								"<input type='" + CHECK_TYPE + "' name=\"restore_path\" value=\"" + path + "\"></input><span class='end_path' onClick=\"" + click_event + "\">/" +
-								"</span></li><ul id='" + ITEM_INDEX + "'>" + 
+				var click_event = "fetch_dir_content('" + Tree.CONTAINER + "', '" + path + "', '" + Tree.computer + "', '" +Tree.CONTAINER+Tree.ITEM_INDEX + "')"
+				var new_line = "<li class='directory'id='li_" + Tree.CONTAINER+Tree.ITEM_INDEX + "'>" +
+								"<input type='" + Tree.CHECK_TYPE + "' name='"+ Tree.CONTAINER +"_restore_path' value=\"" + path + "\"></input><span class='end_path' onClick=\"" + click_event + "\">/" +
+								"</span></li><ul id='" + Tree.CONTAINER+Tree.ITEM_INDEX + "'>" + 
 								"</ul>"
 			};
-			$("#arvore").append(new_line);
-			ITEM_INDEX++;
-		});
-		function fetch_dir_content(path, computer, id) {
-			console.log(path, computer, id);			
+			$("#" + Tree.CONTAINER).append(new_line);
+			Tree.ITEM_INDEX++;
+		};
+		function find_tree_object(container) {
+			for (var t = 0; t < TREES.length; t++) {
+				if (TREES[t].CONTAINER == container) {
+						return TREES[t];
+				}
+			};
+			return false;
+		};
+		function fetch_dir_content(container, path, computer, id) {
+			console.log(container, path, computer, id);
+			var Tree = find_tree_object(container);
 			ul_of_this_item = $("#" + id);
 			this_item_li = $("#li_" + id);
 			if (ul_of_this_item.hasClass("open") == true) {
@@ -47,7 +79,7 @@
 			if ($("#wait")[0] != undefined) {
 				return false
 			} else {
-				$("#arvore").append("<div id='wait'>Aguarde <img src='/media/icons/loading_bar.gif'/></div>");
+				$("#" + Tree.CONTAINER).append("<div id='wait'>Aguarde <img src='/media/icons/loading_bar.gif'/></div>");
 			}
 			$.ajax({
 				type: "POST",
@@ -60,21 +92,21 @@
 					for (var i in file_list) {
 						var full_path = file_list[i];
 						if (full_path[full_path.length -1] == "/") {
-							var click_event = "fetch_dir_content('" + full_path + "', '" + computer + "', '" + ITEM_INDEX + "')"
+							var click_event = "fetch_dir_content('" + Tree.CONTAINER + "', '" + full_path + "', '" + computer + "', '" + Tree.CONTAINER+Tree.ITEM_INDEX + "')"
 							var location_type = "directory";
 						} else {
 							var click_event = ""
 							var location_type = "file";
 						}
 						var new_path = full_path.slice(path.length);
-						var new_line = "<li class='" + location_type + "'id='li_" + ITEM_INDEX + "'>" +
-										"<input type='" + CHECK_TYPE + "' name=\"restore_path\" value=\"" + full_path + "\"></input><span class='end_path' onClick=\"" + click_event + "\">" + new_path +
-										"</span></li><ul id='" + ITEM_INDEX + "'>" + 
+						var new_line = "<li class='" + location_type + "'id='li_" + Tree.CONTAINER+Tree.ITEM_INDEX + "'>" +
+										"<input type='" + Tree.CHECK_TYPE + "' name='"+ Tree.CONTAINER +"_restore_path' value=\"" + full_path + "\"></input><span class='end_path' onClick=\"" + click_event + "\">" + new_path +
+										"</span></li><ul id='" + Tree.CONTAINER+Tree.ITEM_INDEX + "'>" + 
 										"</ul>"
-						if ((HIDE_FILES == false) || (location_type != "file")) {
+						if ((Tree.HIDE_FILES == false) || (location_type != "file")) {
 							ul_of_this_item.append(new_line);
 						} 
-						ITEM_INDEX++;
+						Tree.ITEM_INDEX++;
 					}
 					$("#wait").remove();
 				}
@@ -82,7 +114,7 @@
 		};
 		</script>
 		<style type="text/css">
-			ul#arvore { border: solid 1px;
+			ul.veezortree { border: solid 1px;
 						background: #FEFCC6;
 						padding: 10px;
 					  }
@@ -101,9 +133,9 @@
 	</head>
 	<body>
 		<div>
-			<ul id="arvore">
-				<!-- <div id="teste">Aguarde...</div> -->
-				
+			<ul id="arvore1" class="veezortree" check_type="radio" computer="1" is_windows="false" hide_files="true">
+			</ul>
+			<ul id="arvore2" class="veezortree" check_type="checkbox" computer="3" is_windows="true" hide_files="false">
 			</ul>
 		</div>					
 	</body>
